FullQa New/src/objects/AvaConfig__c.object
<CustomObject>
    <description>This object is being used to store different config to be used in code. Do not give permission on this object other than admin</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of config</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Survey Action Rule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value1__c</fullName>
        <label>Value1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Value2__c</fullName>
        <label>Value2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>AvaConfig</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Survey_Action_Rule</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Survey Action Rule</value>
        </filters>
        <label>Survey Action Rule</label>
    </listViews>
    <nameField>
        <label>AvaConfig Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AvaConfigs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>